--- a/sockjs/src/main/resources/static/index.html
+++ b/sockjs/src/main/resources/static/index.html
@@ -6,28 +6,25 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 </head>
 <body>
 
 <script>
-    var ws = new WebSocket("ws://127.0.0.1:8080/rowws");
-    ws.onopen = function(evt) {
-        console.log("Connection open ...");
-        ws.send("Hello WebSockets!");
+    var sock = new SockJS('http://127.0.0.1:8080/sockjs');
+    sock.onopen = function() {
+        console.log('open');
+        sock.send('test');
     };
 
-    ws.onmessage = function(evt) {
-        console.log( "Received Message: " + evt.data);
-        ws.close();
+    sock.onmessage = function(e) {
+        console.log('message', e.data);
+        sock.close();
     };
 
-    ws.onclose = function(evt) {
-        console.log("Connection closed.");
+    sock.onclose = function() {
+        console.log('close');
     };
-
-    ws.onopen();
-    ws.onmessage();
-    ws.onclose();
 </script>
 </body>
 </html>
